--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botkit": "^0.5.3",
-    "dotenv": "^4.0.0"
+    "dotenv": "^4.0.0",
+    "node-datetime": "^1.0.0"
   }
 }
