--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "botkit": "^0.5.3",
     "dotenv": "^4.0.0",
-    "node-datetime": "^1.0.0"
+    "node-datetime": "^1.0.0",
+    "url-join": "^2.0.1"
   }
 }
